--- a/recipes/prismatic/meta.yaml
+++ b/recipes/prismatic/meta.yaml
@@ -1,4 +1,10 @@
 {% set version = "1.2.1" %}
+{% set build = 0 %}
+
+
+{% set interface = interface or 'cli' %}
+
+
 
 package:
   name: prismatic
@@ -11,6 +17,7 @@ source:
 build:
   number: 0
   skip: True             # [win]
+  string: "{{ interface }}_h{{ PKG_HASH }}_{{ build }}"
 
 requirements:
   build:
@@ -30,7 +37,7 @@ requirements:
     - boost
     - hdf5
     - fftw
-    - qt =5.9.*
+    - qt 5.9.*    # [interface == gui]
     - h5py
     - zlib
   run:
@@ -41,7 +48,7 @@ test:
   source_files:
     - SI100.XYZ
   commands:
-    - prismatic -i SI100.XYZ
+    - prismatic -i SI100.XYZ    # [interface == cli]
 
 
 
