--- a/recipes/prismatic/meta.yaml
+++ b/recipes/prismatic/meta.yaml
@@ -7,7 +7,7 @@
 
 
 package:
-  name: prismatic
+  name: "prismatic"
   version: {{ version }}
 
 source:
@@ -15,7 +15,7 @@ source:
   sha256: 844f659575dd98999b7c4864e850a7ec735f297ab1fb6c2d2be91d7f9720fe70 
 
 build:
-  number: 0
+  number: {{ build }}
   skip: True             # [win]
   string: "{{ interface }}_h{{ PKG_HASH }}_{{ build }}"
 
@@ -37,7 +37,8 @@ requirements:
     - boost
     - hdf5
     - fftw
-    - qt 5.9.*    # [interface == gui]
+    - qt 5.9.*    # [linux and interface == 'gui']
+    - qt          # [not linux and interface == 'gui']
     - h5py
     - zlib
   run:
@@ -48,7 +49,7 @@ test:
   source_files:
     - SI100.XYZ
   commands:
-    - prismatic -i SI100.XYZ    # [interface == cli]
+    - prismatic -i SI100.XYZ    # [interface == 'cli']
 
 
 
