--- a/recipes/prismatic/meta.yaml
+++ b/recipes/prismatic/meta.yaml
@@ -18,12 +18,11 @@ build:
   number: {{ build }}
   skip: True             # [win]
   string: "{{ interface }}_h{{ PKG_HASH }}_{{ build }}"
-  skip_compile_pyc:
-    - "pyprismatic/*.py"
+
 
 requirements:
   build:
-    #- python 3.*                # [interface == 'py']
+    - python 3.*                # [interface == 'py']
     - {{ compiler('c') }}                
     - {{ compiler('cxx') }}              
     - {{ cdt('libxext-devel') }}         # [linux]
@@ -36,8 +35,9 @@ requirements:
     - {{ cdt('libxxf86vm') }}            # [linux]
     - make                               # [unix]
     - cmake
+    - pip                  # [interface == 'py']
   host:
-    #- python 3.*  # [interface == 'py']
+    - python 3.*  # [interface == 'py']
     - boost
     - hdf5
     - fftw
@@ -46,7 +46,8 @@ requirements:
     - h5py
     - zlib
   run:
-    #- python 3.*  # [interface == 'py']
+    - python 3.*  # [interface == 'py']
+    - numpy       # [interface == 'py']
     - fftw
     - libcxx  # [osx]
 
@@ -58,6 +59,7 @@ test:
     - prismatic -i SI100.XYZ         # [interface == 'cli']
     - command -v prismatic-gui       # [linux and interface == 'gui']
     - test -f $PREFIX/Applications/prismatic-gui.app/Contents/MacOS/prismatic-gui # [osx and interface == 'gui']
+    - python -c "import pyprismatic; pyprismatic.demo()" # [interface == 'pydd']
   imports:
     - pyprismatic                    # [interface == 'py']
 
