--- a/recipes/prismatic/meta.yaml
+++ b/recipes/prismatic/meta.yaml
@@ -2,7 +2,13 @@
 {% set build = 0 %}
 
 
-{% set interface = interface or 'cli' %}
+{% set interface = interface or 'nogui' %}
+{% set processor = processor or 'cpu' %}
+
+{% if interface == "gui" %}
+# prioritize full gui version via build number
+{% set build = build + 100 %}
+{% endif %}
 
 
 
@@ -22,7 +28,7 @@ build:
 
 requirements:
   build:
-    - python 3.*                # [interface == 'py']
+    - python 3.*
     - {{ compiler('c') }}                
     - {{ compiler('cxx') }}              
     - {{ cdt('libxext-devel') }}         # [linux]
@@ -35,33 +41,34 @@ requirements:
     - {{ cdt('libxxf86vm') }}            # [linux]
     - make                               # [unix]
     - cmake
-    - pip                  # [interface == 'py']
+    - pip                                
   host:
-    - python 3.*  # [interface == 'py']
+    - python 3.*                       
     - boost
     - hdf5
     - fftw
-    - qt 5.9.*    # [linux and interface == 'gui']
-    - qt          # [not linux and interface == 'gui']
+    - qt 5.9.*                           # [linux and interface == 'gui']
+    - qt                                 # [not linux and interface == 'gui']
+    - numpy
     - h5py
     - zlib
   run:
-    - python 3.*  # [interface == 'py']
-    - numpy       # [interface == 'py']
+    - python 3.*  
+    - numpy
+    - h5py       
     - fftw
-    - libcxx  # [osx]
+    - libcxx                             # [osx]
 
 test:
   source_files:
-    - SI100.XYZ                      # [interface == 'cli']
+    - SI100.XYZ                          
   commands:
-    - command -v prismatic           # [interface == 'cli']
-    - prismatic -i SI100.XYZ         # [interface == 'cli']
-    - command -v prismatic-gui       # [linux and interface == 'gui']
+    - command -v prismatic               
+    - prismatic -i SI100.XYZ             
+    - command -v prismatic-gui           # [linux and interface == 'gui']
     - test -f $PREFIX/Applications/prismatic-gui.app/Contents/MacOS/prismatic-gui # [osx and interface == 'gui']
-    - python -c "import pyprismatic; pyprismatic.demo()" # [interface == 'pydd']
   imports:
-    - pyprismatic                    # [interface == 'py']
+    - pyprismatic
 
 
 about:
